--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ProiectAndroid</string>
+
+    <string-array name="profileGenres">
+        <item>Masculin</item>
+        <item>Feminin</item>
+    </string-array>
 </resources>
