firebase and auth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,30 @@
 <resources>
     <string name="app_name">ProiectAndroid</string>
-    <string name="profile_name">Nume</string>
+    <string name="profile_name">Nume Prenume</string>
     <string name="profile_bdate">Data Nasterii</string>
     <string name="profile_age">Varsta</string>
     <string name="profile_gen">Gen</string>
     <string name="profile_weight">Greutate (kg)</string>
     <string name="profile_height">Inaltime (cm)</string>
+    <string name="profile_email">Email</string>
+    <string name="profile_password">Parola</string>
+    <string name="profile_loading">Se încarcă...</string>
+    <string name="profile_update">Salvează Modificările</string>
     <string name="setup_profile_title">Introduceti Datele Dvs.</string>
     <string name="menu_item_profile">Profil</string>
     <string name="menu_item_aliments">Alimentare</string>
     <string name="menu_item_sleep">Somn</string>
     <string name="menu_item_PA">Activitate fizica</string>
-
-
-
+    <string name="menu_item_log_out">Deconectează-te</string>
+    <string name="start_title">Proiect 21</string>
+    <string name="start_sub_title">Aplicatie mobila pentru monitorizarea activitatilor personale (greutate, ore, durate si continut mese, efort zilnic depus, etc...)</string>
+    <string name="start_register">Crează Cont</string>
+    <string name="start_login">Conectează-te</string>
 
     <string-array name="profileGenres">
         <item>Masculin</item>
         <item>Feminin</item>
     </string-array>
+
+
 </resources>
